# hippo

./: .gitignore  CLAUDE.md  KNOWN_ISSUES.md  README.md  pyproject.toml
commands/: dream.md
docs/: operations.md
docs/superpowers/plans/: 2026-04-28-llm-backend-toggle.md  2026-04-29-prune-phase.md  2026-04-30-dream-progress-tracking.md  2026-05-04-cli-scope-flag.md
hooks/: precompact.sh  stop.sh  userprompt-submit.sh
launchd/: dream-heavy.plist.template  memory-daemon.plist.template
schema/: 001_initial.sql  002_prune_metadata.sql  003_dream_progress.sql
scripts/: bench_atomize.py  bench_relation_classifiers.py  install-daemon.sh  install-dream.sh  install-hooks.sh  install.sh  uninstall.sh
src/hippo/: __init__.py  config.py  lock.py  scope_detect.py
tests/: conftest.py  test_atomize.py  test_backend_toggle.py  test_bodies.py  test_body_files.py  test_bootstrap.py  test_capture.py  test_cli_tools.py  test_config.py  test_config_toggle.py  test_contradiction.py  test_daemon_client.py  test_daemon_server.py  test_dream_cleanup.py  test_dream_heavy_orchestrator.py  test_dream_light.py  test_dream_progress.py  test_dream_runs.py  test_dream_status_cli.py  test_edge_proposal.py  test_edges.py  test_embedder.py  test_graph_expand.py  test_heads.py  test_inject.py  test_llm.py  test_llm_select.py  test_lock.py  test_migrations.py  test_multi_head.py  test_multi_store.py  test_pipeline.py  test_protocol.py  test_rerank_step.py  test_reranker.py  test_resolve_project.py  test_review_phase.py  test_review_storage.py  test_scope_args.py  test_stats_cli.py  (+5 more)
(+56 files in other folders)
