[project]
name = "hippo"
version = "0.1.0"
description = "Atomic memory system for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.5",
    "python-frontmatter>=1.1.0",
    "mlx>=0.18",
    "mlx-lm>=0.19",
    "sentence-transformers>=3.0",
    "huggingface-hub>=0.26",
    "google-genai>=1.0",
]

[project.scripts]
memory-stats   = "hippo.cli.stats:main"
memory-get     = "hippo.cli.get:main"
memory-search  = "hippo.cli.search:main"
memory-archive = "hippo.cli.archive:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
